# ComfyUI-RH-Bernini-Full

./: .gitignore  NOTICE  README.md  README_CN.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  rh_config.json
bernini/: __init__.py  cli.py  pipeline.py
bernini/data/: bernini_template.py
bernini/models/: __init__.py  modeling_qwen2_5_vl.py  transformer_wan.py  wan_diffusion.py
docs/: bernini.md
examples/: README_CN.md  bernini_i2i_test.json  bernini_i2i_test_api.json  bernini_r2v_test_api.json  bernini_rv2v_test_api.json  bernini_t2i_test_api.json  bernini_t2v_test_api.json  bernini_v2v_test.json  bernini_v2v_test_api.json
examples/assets/: i2i_source.xpm  reference_tile.xpm
tests/: test_lora_memory.py  test_official_bernini_params.py  test_progress.py  test_transcribe_skill_contract.py  test_wan_memory.py
tools/: download_modelscope.py  quantize_bernini_qint8.py
